// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/processor.js values should expand namespaced value references (#1020) 1`] = `
"/* packages/processor/test/specimens/namespace-expansion/c.css */
/* packages/processor/test/specimens/namespace-expansion/b.css */
/* packages/processor/test/specimens/namespace-expansion/a.css */
.mc_someClass {
	color: cyan;
	background-color: cyan + var(--other);
}"
`;

exports[`/processor.js values should support exporting imported variables 1`] = `
"/* packages/processor/test/specimens/values.css */

/* packages/processor/test/specimens/value-import.css */
.mc_red {
    color: red;
}

.mc_green {
    color: green;
}

/* packages/processor/test/specimens/value-export.css */
.mc_red {
    color: red;
}

.mc_green {
    color: green;
}
"
`;

exports[`/processor.js values should support importing variables from a file 1`] = `
"/* packages/processor/test/specimens/values.css */
/* packages/processor/test/specimens/value-import.css */
.mc_red {
    color: red;
}

.mc_green {
    color: green;
}
"
`;

exports[`/processor.js values should support layers of namespaced value references 1`] = `
"/* packages/processor/test/specimens/deep-namespace/c.css */
/* packages/processor/test/specimens/deep-namespace/b.css */
/* packages/processor/test/specimens/deep-namespace/a.css */
.mc_a {
    color: cyan;
}"
`;

exports[`/processor.js values should support local values in value composition 1`] = `
"/* packages/processor/test/specimens/folder/folder.css */
.mc_folder { margin: 2px; }
/* packages/processor/test/specimens/local.css */
.mc_booga { background: green; }
/* packages/processor/test/specimens/simple.css */
.mc_fooga { background: red; }
"
`;

exports[`/processor.js values should support several layers of value references 1`] = `
"/* packages/processor/test/specimens/values.css */
/* packages/processor/test/specimens/value-references.css */
.mc_aliased {
    color: blue;
    background: blue;
}
"
`;

exports[`/processor.js values should support simple values 1`] = `
"/* values.css */
.mc_a {
    color: red;
    font-family: Segoe UI
    sans-serif;
}"
`;

exports[`/processor.js values should support value aliasing 1`] = `
"/* packages/processor/test/specimens/values.css */
/* packages/processor/test/specimens/value-alias.css */
.mc_aliased {
    color: red;
    background: blue;
}
"
`;

exports[`/processor.js values should support value composition 1`] = `
"/* packages/processor/test/specimens/values.css */
/* packages/processor/test/specimens/value-composition.css */
.mc_red {
    color: red;
    background: blue;
}
"
`;

exports[`/processor.js values should support value namespaces 1`] = `
"/* packages/processor/test/specimens/values.css */
/* packages/processor/test/specimens/value-namespace.css */
.mc_red {
    color: red;
}

.mc_blue {
    color: blue;
}

.mc_other {
    color: #000;
}
"
`;

exports[`/processor.js values should support value replacement in :external(...) 1`] = `
"/* packages/processor/test/specimens/simple.css */
.mc_wooga { color: red; }
/* packages/processor/test/specimens/folder/folder.css */
.mc_folder { margin: 2px; }
/* packages/processor/test/specimens/local.css */
.mc_booga { background: green; }
/* packages/processor/test/specimens/externals.css */
.mc_a .mc_wooga {
    color: green;
}
.mc_b:hover .mc_booga {
    background: blue;
}
.mc_wooga .mc_booga {
    color: red;
}
"
`;

exports[`/processor.js values should support value replacement in @value 1`] = `
"/* packages/processor/test/specimens/values.css */ /* packages/processor/test/specimens/simple.css */
.mc_fooga { width: calc(1rem + 1rem); }
"
`;

exports[`/processor.js values shouldn't replace values unless they're safe 1`] = `
"/* values.css */
.mc_a {
    color: foo-a;
    color: foo(red);
    color: foo_a;
    color: fooa;
    color: foo, red;
    color: foo, red, woo;
    width: foopx;
    color:red;
    color:foo-a;
    color: red;
}

@media red { }
@media red, b {}
@media foo-a, b {}
@media foo-a { }
@media (min-width: red) { }
@media (min-width: foo-a) { }
@media not red {}
@media not (red) {}
@media not foo-a {}
@media not (foo-a) {}"
`;
